fix(core): `PrimitiveTextfield` fix prefix when aligned to the right (#1969)
* fix(core): `PrimitiveTextfield` fix prefix when aligned to the right

* chore: comment

--- a/projects/core/components/primitive-textfield/value-decoration/value-decoration.style.less
+++ b/projects/core/components/primitive-textfield/value-decoration/value-decoration.style.less
@@ -2,11 +2,12 @@
     position: absolute;
     display: block;
     height: 1.25rem;
-    max-width: 100%;
+    width: 100%;
     margin: -1.25rem 0;
     padding: 0.625rem 0;
     box-sizing: content-box;
     color: var(--tui-text-01);
+    animation: tuiPresent 1s;
 
     &._table {
         position: static;
