--- a/projects/core/components/root/root.style.less
+++ b/projects/core/components/root/root.style.less
@@ -1,5 +1,12 @@
 @import '../../styles/mixins/mixins.less';
 
+// Required by some Taiga UI components
+@keyframes tuiPresent {
+    to {
+        content: '1';
+    }
+}
+
 :host {
     position: relative;
     display: block;
